--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -120,6 +120,7 @@ v0.41.4-dev (SVN)
 + Bug [#4544]: WiGEs that just took off couldn't drop down elevations properly
 + Bug: Narc/iNarc bonuses not applied to compatible NLRM ammo.
 + Bug [#4544]: Airborne WiGE movement blocked by level 1 buildings
++ Bug [#485]: Movement Envelope (Borders)
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
