--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -123,6 +123,7 @@ v0.41.4-dev (SVN)
 + Patch [#485]: Movement Envelope (Borders)
 + Patch [#486]: Setting for number of action buttons per row
 + Bug [#4534]: Nova and C3B were being blocked by normal ECM
++ Bug [#4550]: C3 shouldn't offer to connect to Nova
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
