--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -125,6 +125,7 @@ v0.41.4-dev (SVN)
 + Bug [#4534]: Nova and C3B were being blocked by normal ECM
 + Bug [#4550]: C3 shouldn't offer to connect to Nova
 + Patch [#487]: Impact-resistant armor effects from FM 3145
++ Patches [#405/#406/#407/#408/#409] - Various Source Updates.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
