--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -129,6 +129,7 @@ v0.41.4-dev (SVN)
 + Bug [#4459]: Mode name issues with Bracketing Fire and AAA fire
 + Bug [#4450]: Pending modes not reflected in UnitDisplay System & Weapons tabs
 + Bug: UnitDisplay System tab would display "()" for equipment in "Normal" mode
++ Bug: Slot list not updated when mode changed in UnitDisplay Systems tab
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
