--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -132,6 +132,7 @@ v0.41.4-dev (SVN)
 + Bug: Slot list not updated when mode changed in UnitDisplay Systems tab
 + Patches [#405/#406/#407/#408/#409] - Various Source Updates.
 + New Sprites
++ Bug: Airborne ground units not allowed to make  direct-fire artillery attacks.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
