--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -133,6 +133,7 @@ v0.41.4-dev (SVN)
 + Patches [#405/#406/#407/#408/#409] - Various Source Updates.
 + New Sprites
 + Bug: Airborne ground units not allowed to make  direct-fire artillery attacks.
++ Patch [#488]: Environmental heat sources and heat-dissipating armor
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
