--- a/trunk/megamek/i18n/megamek/common/report-messages.properties
+++ b/trunk/megamek/i18n/megamek/common/report-messages.properties
@@ -502,7 +502,7 @@
 5020=Adding <data> heat due to extreme temperatures...
 5025=Subtracting <data> heat due to extreme temperatures...
 5026=Subtracting <data> heat due to combat computer..
-5030=Adding 5 heat from a fire...
+5030=Adding <data> heat from a fire...
 5032=Adding <data> heat from magma...
 5035=<data> (<data>) gains <data> heat, sinks <data> heat and is now at <data> heat.
 5040=<data> (<data>) needs a <data>+ to avoid inferno ammo explosion, rolls <data> : <msg:5041,5042>
@@ -607,6 +607,7 @@
 5541=Radical heat sinks failure check, needs <data>+, rolls: <data>, <msg:5542,5543>
 5542=<font color='C00000'>failure!</font>
 5543=<font color='008000'>success!</font>
+5550=External heat reduced due to intact heat-dissipating armor!
 
 #6000's -- Damage Related
 6005=\ no effect.
