--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -136,6 +136,7 @@ v0.41.4-dev (SVN)
 + Patch [#488]: Environmental heat sources and heat-dissipating armor
 + Patch [#4551]: TSEMP "every other turn" should be per weapon, not per entity
 + Bug:Some Infantry weapons have the wrong Ammotype.
++ Patch [#1377]: Implement Laser-Guided Bomb Munition
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
