--- a/trunk/megamek/i18n/megamek/common/report-messages.properties
+++ b/trunk/megamek/i18n/megamek/common/report-messages.properties
@@ -333,6 +333,7 @@
 3425=The remaining <data> missile(s) find no new target.
 3426=The remaining <data> missile(s) find no new target due to hostile ECM interference.
 3430=Needs <data> [<data>] to ignite, rolls <data>
+3433=-2 bonus for laser-guided bomb against tagged target!
 3435=<data><data><data> points of damage. 
 3436=<newline><data> points absorbed by armor. <data> armor remaining.
 3437=<newline>Damage reduced to <data> due to building scale.
