--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -140,6 +140,7 @@ v0.41.4-dev (SVN)
 + Bug: [#4435]: Rear Mounted Bulldozer? 
 + Bug: Fixing extra code committed in error.
 + Patches [#415 to #424] - Various Source and quirks updates.
++ Patch [#489]: HarJel II/III repair systems
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
