--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -143,6 +143,8 @@ v0.41.4-dev (SVN)
 + Patch [#489]: HarJel II/III repair systems
 + Bug: VTOLs and large support vehicles could be hit and destroyed by aimed shots
     to imaginary dual turrets (which VTOLs can't even mount, anyway).
++ Bug: GameOptionsDialog Defaults had strange behavior: now resets all options
+    to their default values
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
