--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -145,6 +145,7 @@ v0.41.4-dev (SVN)
     to imaginary dual turrets (which VTOLs can't even mount, anyway).
 + Bug: GameOptionsDialog Defaults had strange behavior: now resets all options
     to their default values
++ Bug: GameOptionsDialog Load could fail to update options in certain situations
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
