--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -146,6 +146,7 @@ v0.41.4-dev (SVN)
 + Bug: GameOptionsDialog Defaults had strange behavior: now resets all options
     to their default values
 + Bug: GameOptionsDialog Load could fail to update options in certain situations
++ Bug: Meks carrying mechanized battle armor can't jump.
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
