--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -970,6 +970,8 @@ LOSDialog.title=LOS tool settings
 MapDimensionsDialog.MapDimensions=Map Dimensions
 MechDisplay.0=Ammo
 MechDisplay.AffectedBy=Affected By:
+MechDisplay.AllEquipment=All Equipment
+MechDisplay.AllWeapons=All Weapons
 MechDisplay.Ammo=Ammo
 MechDisplay.ArcHeat=Arc Heat
 MechDisplay.attached=attached
