--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -149,6 +149,7 @@ v0.41.4-dev (SVN)
 + Bug: Meks carrying mechanized battle armor can't jump.
 + Feature: Added "All Equipment" and "All Weapons" to locations list in
     UnitDisplay Systems tab
++ Bug [#4552]: Swarming and target destruction - errata
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
