--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -39,6 +39,7 @@ v0.41.5-dev (SVN)
 + RFE [#1169] IS ammo in Clan Arrow IV (Ammo added as unofficial)
 + Feature: Added weapon ranges to weapon list tool tip entry
 + Bug: Potential StackOverflowException in UnitDisplay.processKeyBinding
++ Bug [#4561]: NPE When Using Remove button in Deploy phase
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
