--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -43,6 +43,7 @@ v0.41.5-dev (SVN)
 + Bug: Non-jumping units still considered to potentially jump 0 MP for defensive
     BV purposes (and getting the +1 for jump movement that way).
 + Small general jump/UMU BV cleanup.
++ Data: New Sprites/Sources Fixes.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
