--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -44,6 +44,7 @@ v0.41.5-dev (SVN)
     BV purposes (and getting the +1 for jump movement that way).
 + Small general jump/UMU BV cleanup.
 + Data: New Sprites/Sources Fixes.
++ Bug: Several TacOps laser underwater ranges incorrect.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
