--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -46,7 +46,8 @@ v0.41.5-dev (SVN)
 + Data: New Sprites/Sources Fixes.
 + Bug: Several TacOps laser underwater ranges incorrect.
 + Bug: Unconscious pilots still making shutdown/startup rolls.
-+ Bug: Quad 'Mechs randomly getting -2 to shutdown/startup checks.
++ Bug: Quad 'Mechs getting arbitrary -2 to shutdown/startup checks.
++ Bug: Damage absorbed by modular armor not counted towards "damage this phase".
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
