--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -48,6 +48,8 @@ v0.41.5-dev (SVN)
 + Bug: Unconscious pilots still making shutdown/startup rolls.
 + Bug: Quad 'Mechs getting arbitrary -2 to shutdown/startup checks.
 + Bug: Damage absorbed by modular armor not counted towards "damage this phase".
++ Bug [#4564]: Secondary Swarm LRM attacks "inherit" attack direction and
+    called-shot status from original target.
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
