--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -255,6 +255,7 @@ v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: MechView armored cockpit/engine identification not working as intended
 + Bug [#4563]: Mouse-over info no longer shows the unit´s remaining armor and
     structure points
++ Bug [#4569]: Aero.addClanCase adds Case to Aero.LOC_WINGS
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
