--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -56,6 +56,7 @@ v0.41.5-dev (SVN)
 + Errata: Thunder minefields scatter by MoF and lose density if they do.
 + Patches [#449 to #458] - Various Source Updates
 + Folder Name Clean up.  Where possible removing the extra XTR reference.
++ Data: New Sprites
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
