--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -60,6 +60,7 @@ v0.41.5-dev (SVN)
 + Patch [#497]: Make Princess avoid overkilling targets
 + Patch [#496]: Make Princess prioritize high-damage targets
 + Patch [#492]: Individual weapon field of fire
++ Bug [#4572]: Clicking a hex can give targeting information for unseen units
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
