--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -1186,6 +1186,7 @@ MechView.Anti-Penetrative\ Ablation=\ (Anti-Penetrative\ Ablation)
 MechView.Heat-Dissipating=\ (Heat-Dissipating)
 MechView.Impact-Resistant=\ (Impact-Resistant)
 MechView.Ballistic-Reinforced=\ (Ballistic-Reinforced)
+MechView.Prototype\ Ferro-Aluminum=\ (Ferro-Aluminum Prototype)
 MechView.Primitive=\ (Primitive)
 MechView.Heat=\ Heat
 MechView.HeatSinks=Heat Sinks: 
