--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -66,6 +66,7 @@ v0.41.5-dev (SVN)
     building during physical phase
 + Data: New Sprites
 + Patches [#459 to #4661] - Various Source Updates
++ Bug [#4579]: Dismounting infantry shouldn't cost MP
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
