--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -1,6 +1,5 @@
 VERSION HISTORY:
 ----------------
-
 v0.41.5-dev (SVN)
 + Bug: Backhoe, Chainsaw, Dual Saw, Mining Drill, Pile Driver, and Rock Cutter
     not applying bonus damage vs. buildings.
@@ -75,6 +74,7 @@ v0.41.5-dev (SVN)
 + don't set repairable status in Entity.damageSystem (for MHQ bug 890]
 + Data: New Sprites and restoring missing sprites caused by SF crash.
 + Data: Fixes to Mech Files and RAT Fixes.
++ Bug [#4477]: Princess Aero path-planning issues
 
 v0.41.4 (2015-05-31 16:45 UTC)
 + Bug: UnitDisplay System Tab would double up on status modifiers, like * and j
